--- a/package.json
+++ b/package.json
@@ -72,13 +72,8 @@
     "typescript": "5.7.2"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
+    "node": "^18.20.2 || >=20.9.0",
+    "yarn": ">=1.22.0"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
